fixed an issue with the cover image, was not showing up.

--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ body
     font-family: 'Dancing Script', cursive;
     font-size: 55px;
     color: white;
-    background-image: url("./macrame2edit.jpg");
+    background-image: url("./image-assets/macrame2edit.jpg");
     background-size: cover;
 }
 
